[package]
name = "lightningnetworkrust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
